--- a/services/settings/pkg/service/v0/l10n/locale/es/LC_MESSAGES/settings.po
+++ b/services/settings/pkg/service/v0/l10n/locale/es/LC_MESSAGES/settings.po
@@ -4,7 +4,8 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Jörn Friedrich Dreyer <jfd@butonic.de>, 2025
+# Elías Martín, 2025
+# Alejandro Robles, 2025
 # 
 #, fuzzy
 msgid ""
@@ -13,59 +14,58 @@ msgstr ""
 "Report-Msgid-Bugs-To: EMAIL\n"
 "POT-Creation-Date: 2025-07-09 14:37+0000\n"
 "PO-Revision-Date: 2025-01-27 10:17+0000\n"
-"Last-Translator: Jörn Friedrich Dreyer <jfd@butonic.de>, 2025\n"
-"Language-Team: German (https://app.transifex.com/opencloud-eu/teams/204053/de/)\n"
+"Last-Translator: Alejandro Robles, 2025\n"
+"Language-Team: Spanish (https://app.transifex.com/opencloud-eu/teams/204053/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: de\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
+"Plural-Forms: nplurals=3; plural=n == 1 ? 0 : n != 0 && n % 1000000 == 0 ? 1 : 2;\n"
 
 #. name of the notification option 'Space Shared'
 #: pkg/store/defaults/templates.go:20
 msgid "Added as space member"
-msgstr "Als Space Mitglied hinzugefügt"
+msgstr "Incluido como miembro del espacio"
 
 #. translation for the 'daily' email interval option
 #: pkg/store/defaults/templates.go:50
 msgid "Daily"
-msgstr "Täglich"
+msgstr "Diario"
 
 #. name of the notification option 'Email Interval'
 #: pkg/store/defaults/templates.go:44
 msgid "Email sending interval"
-msgstr "E-Mail-Versandintervall"
+msgstr "Intervalo de envío de correos"
 
 #. name of the notification option 'File Rejected'
 #: pkg/store/defaults/templates.go:40
 msgid "File rejected"
-msgstr "Datei abgelehnt"
+msgstr "Archivo rechazado"
 
 #. translation for the 'instant' email interval option
 #: pkg/store/defaults/templates.go:48
 msgid "Instant"
-msgstr "Sofort"
+msgstr "Instantaneo"
 
 #. translation for the 'never' email interval option
 #: pkg/store/defaults/templates.go:54
 msgid "Never"
-msgstr "Nie"
+msgstr "Nunca"
 
 #. description of the notification option 'Space Shared'
 #: pkg/store/defaults/templates.go:22
 msgid "Notify when I have been added as a member to a space"
-msgstr ""
-"Benachrichtigung wenn ich zu einem Space als Mitglied hinzugefügt wurde"
+msgstr "Notificar cuando me han agregado como miembro a un espacio"
 
 #. description of the notification option 'Space Unshared'
 #: pkg/store/defaults/templates.go:26
 msgid "Notify when I have been removed as member from a space"
-msgstr "Benachrichtigung wenn ich Mitglied aus einem Space entfernt wurde"
+msgstr "Notificar cuando he sido eliminado como miembro de un espacio"
 
 #. description of the notification option 'Share Received'
 #: pkg/store/defaults/templates.go:10
 msgid "Notify when I have received a share"
-msgstr "Benachrichtigung wenn ich eine Dateifreigabe bekommen habe"
+msgstr "Notificarme cuando he recibido un compartido"
 
 #. description of the notification option 'File Rejected'
 #: pkg/store/defaults/templates.go:42
@@ -73,75 +73,75 @@ msgid ""
 "Notify when a file I uploaded was rejected because of a virus infection or "
 "policy violation"
 msgstr ""
-"Benachrichtigung wenn eine hochgeladene Datei aufgrund einer Vireninfektion "
-"oder eines Verstoßes gegen die Richtlinien abgelehnt wurde"
+"Notificar cuando un archivo que he subido ha sido rechazado por contener "
+"virus o violar alguna política"
 
 #. description of the notification option 'Share Removed'
 #: pkg/store/defaults/templates.go:14
 msgid "Notify when a received share has been removed"
-msgstr "Benachrichtigung wenn eine empfangene Dateifreigabe beendet wurde"
+msgstr "Notificar cuando un compartido que he recibido ha sido eliminado"
 
 #. description of the notification option 'Share Expired'
 #: pkg/store/defaults/templates.go:18
 msgid "Notify when a received share has expired"
-msgstr "Benachrichtigung wenn eine empfangene Dateifreigabe abgelaufen ist"
+msgstr "Notificar cuando un compartido recibido ha expirado."
 
 #. description of the notification option 'Space Deleted'
 #: pkg/store/defaults/templates.go:38
 msgid "Notify when a space I am member of has been deleted"
-msgstr "Benachrichtigung wenn ein Space wo ich Mitglied bin gelöscht wurde"
+msgstr "Notificar cuando un espacio del que soy miembro ha sido eliminado"
 
 #. description of the notification option 'Space Disabled'
 #: pkg/store/defaults/templates.go:34
 msgid "Notify when a space I am member of has been disabled"
-msgstr "Benachrichtigung wenn ein Space wo ich Mitglied bin deaktiviert wurde"
+msgstr "Notificar cuando un espacio del que soy miembro ha sido deshabilitado"
 
 #. description of the notification option 'Space Membership Expired'
 #: pkg/store/defaults/templates.go:30
 msgid "Notify when a space membership has expired"
-msgstr "Benachrichtigung wenn eine Space Mitgliedschaft abgelaufen ist"
+msgstr "Notificar cuando la membresía a un espacio ha caducado"
 
 #. name of the notification option 'Space Unshared'
 #: pkg/store/defaults/templates.go:24
 msgid "Removed as space member"
-msgstr "Space-Mitgliedschaft entfernt"
+msgstr "Eliminado como miembro del espacio"
 
 #. description of the notification option 'Email Interval'
 #: pkg/store/defaults/templates.go:46
 msgid "Selected value:"
-msgstr "Eingestellter Wert:"
+msgstr "Valor seleccionado:"
 
 #. name of the notification option 'Share Expired'
 #: pkg/store/defaults/templates.go:16
 msgid "Share Expired"
-msgstr "Freigabe abgelaufen"
+msgstr "Compartido expirado"
 
 #. name of the notification option 'Share Received'
 #: pkg/store/defaults/templates.go:8
 msgid "Share Received"
-msgstr "Freigabe erhalten"
+msgstr "Compartido recibido"
 
 #. name of the notification option 'Share Removed'
 #: pkg/store/defaults/templates.go:12
 msgid "Share Removed"
-msgstr "Freigabe entfernt"
+msgstr "Compartido eliminado"
 
 #. name of the notification option 'Space Deleted'
 #: pkg/store/defaults/templates.go:36
 msgid "Space deleted"
-msgstr "Space gelöscht"
+msgstr "Espacio eliminado"
 
 #. name of the notification option 'Space Disabled'
 #: pkg/store/defaults/templates.go:32
 msgid "Space disabled"
-msgstr "Space deaktiviert"
+msgstr "Espacio inhabilitado"
 
 #. name of the notification option 'Space Membership Expired'
 #: pkg/store/defaults/templates.go:28
 msgid "Space membership expired"
-msgstr "Space-Mitgliedschaft abgelaufen"
+msgstr "Membresia al espacio expirada"
 
 #. translation for the 'weekly' email interval option
 #: pkg/store/defaults/templates.go:52
 msgid "Weekly"
-msgstr "Wöchentlich"
+msgstr "Semanal"
