--- a/services/userlog/pkg/service/l10n/locale/nl/LC_MESSAGES/userlog.po
+++ b/services/userlog/pkg/service/l10n/locale/nl/LC_MESSAGES/userlog.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: EMAIL\n"
-"POT-Creation-Date: 2025-08-02 00:00+0000\n"
+"POT-Creation-Date: 2025-08-05 00:01+0000\n"
 "PO-Revision-Date: 2025-01-27 10:17+0000\n"
 "Last-Translator: Stephan Paternotte <stephan@paternottes.net>, 2025\n"
 "Language-Team: Dutch (https://app.transifex.com/opencloud-eu/teams/204053/nl/)\n"
@@ -95,7 +95,7 @@ msgstr ""
 
 #: pkg/service/templates.go:19
 msgid "{user} added you to Space {space}"
-msgstr "{user} heeft u toegevoegd aan ruimte {space}"
+msgstr "{user} heeft jou toegevoegd aan ruimte {space}"
 
 #: pkg/service/templates.go:34
 msgid "{user} deleted Space {space}"
@@ -107,12 +107,12 @@ msgstr "{user} heeft ruimte {space} uitgeschakeld"
 
 #: pkg/service/templates.go:24
 msgid "{user} removed you from Space {space}"
-msgstr "{user} heeft u verwijderd uit ruimte {space}"
+msgstr "{user} heeft jou verwijderd uit ruimte {space}"
 
 #: pkg/service/templates.go:44
 msgid "{user} shared {resource} with you"
-msgstr "{user} heeft {resource} met u gedeeld"
+msgstr "{user} heeft {resource} met jou gedeeld"
 
 #: pkg/service/templates.go:49
 msgid "{user} unshared {resource} with you"
-msgstr "{user} heeft het delen van {resource} met u beëindigd"
+msgstr "{user} heeft het delen van {resource} met jou beëindigd"
